# myome-OS

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_create_hypertables.py
backend/myome/: __init__.py
backend/myome/analytics/: __init__.py  data_loader.py  service.py
backend/myome/analytics/alerts/: __init__.py  anomaly.py  manager.py
backend/myome/analytics/correlation/: __init__.py  engine.py  trends.py
backend/myome/analytics/prediction/: __init__.py  glucose.py
backend/myome/api/: __init__.py  auth.py  main.py
backend/myome/api/middleware/: __init__.py  rate_limit.py
backend/myome/api/routes/: __init__.py  alerts.py  auth.py  clinical.py  devices.py  health.py  hereditary.py  oauth.py  users.py
backend/myome/api/schemas/: __init__.py  health.py  user.py
backend/myome/clinical/: __init__.py
backend/myome/clinical/fhir/: __init__.py  resources.py
backend/myome/clinical/reports/: __init__.py  generator.py
backend/myome/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  logging.py
backend/myome/core/models/: __init__.py  biomarker.py  device.py  genomic.py  health_profile.py  lab_result.py  mixins.py  time_series.py  user.py
backend/myome/hereditary/: __init__.py  artifact.py  document_processor.py  models.py  risk.py  watchlist.py
backend/myome/integrations/: __init__.py  tasks.py
backend/myome/integrations/oauth/: __init__.py  base.py  whoop.py  withings.py
backend/myome/sensors/: __init__.py  base.py  ingestion.py  normalizer.py  registry.py  tasks.py
backend/scripts/: seed_mock_data.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_api_integration.py  test_core.py  test_models.py  test_schemas.py  test_sensors.py
(+68 files in other folders)
